// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gradient tests > When view is temperature_2m, gradient is created 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <g>
      0
      <defs>
        <lineargradient
          id=":r9:"
          x1="0"
          x2="0"
          y1="0"
          y2="1"
        >
          <stop
            offset="0%"
            stop-color="hsl(202.08333333333334deg, 100%, 50%)"
          />
          <stop
            offset="100%"
            stop-color="hsl(250deg, 100%, 50%)"
          />
        </lineargradient>
      </defs>
    </g>
  </svg>
</div>
`;

exports[`Gradient tests > When view is us_aqi, gradient is created 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <g>
      0
      <defs>
        <lineargradient
          gradientUnits="userSpaceOnUse"
          id=":rb:"
          x1="0"
          x2="0"
          y1="120"
          y2="-40"
        >
          <stop
            offset="-13.492753623188406"
            stop-color="#6D0000"
          />
          <stop
            offset="-7.695652173913043"
            stop-color="#8400FF"
          />
          <stop
            offset="-4.797101449275362"
            stop-color="#FF2204"
          />
          <stop
            offset="-3.3478260869565215"
            stop-color="#FF9431"
          />
          <stop
            offset="-1.8985507246376812"
            stop-color="#FFF501"
          />
          <stop
            offset="-0.4492753623188406"
            stop-color="#00FF66"
          />
        </lineargradient>
      </defs>
    </g>
  </svg>
</div>
`;

exports[`Gradient tests > When view is uv_index, gradient is created 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <g>
      0
      <defs>
        <lineargradient
          gradientUnits="userSpaceOnUse"
          id=":ra:"
          x1="0"
          x2="0"
          y1="120"
          y2="-40"
        >
          <stop
            offset="0.6811594202898551"
            stop-color="#FF00D6"
          />
          <stop
            offset="0.7101449275362319"
            stop-color="#FF2204"
          />
          <stop
            offset="0.7971014492753623"
            stop-color="#FF9431"
          />
          <stop
            offset="0.855072463768116"
            stop-color="#FFF501"
          />
          <stop
            offset="0.9420289855072463"
            stop-color="#00FF66"
          />
        </lineargradient>
      </defs>
    </g>
  </svg>
</div>
`;
